[package]
name = "rust-in-space"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.171", features = ["derive"] }
leptos = { version = "0.4.5", features = ["csr", "nightly"] }
reqwasm = "0.5"
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
thiserror = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
